--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ plugins:
 author:
   name   : "Mercy Mogambi"
   avatar : "/assets/images/gitb.jpeg"
-  bio    : "Geomatic Engineering and Geospatial Information Systems. Certified Data Analyst. Data Annotation."
+  bio    : "Geospatial Data Analyst | Engineering Surveyor | Data and AI Enthusiast"
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
