--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,10 @@ author:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/BitutuM"
+      - label: "Instagram"
+       icon: "fab fa-fw fa-instagram"
+       url: "https://www.instagram.com/bitutu.?igsh=azNtbHh5NjM4cGtu"
+      
       - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/mercy-mogambi"
@@ -83,6 +87,9 @@ footer:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/BitutuM"
+    - label: "Instagram"
+      icon: "fab fa-fw fa-instagram"
+      url: "https://www.instagram.com/bitutu.?igsh=azNtbHh5NjM4cGtu"
       - label: "LinkedIn"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/mercy-mogambi"
