--- a/_config.yml
+++ b/_config.yml
@@ -117,3 +117,7 @@ category_archive:
 tag_archive:
   type: liquid
   path: /tags/
+collections:
+  portfolio:
+    output: true
+    permalink: /portfolio/:title/
