--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ author:
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      url: "https://bitutum.github.io/BitutuMgithub.io/"
+      url: "https://bitutum.github.io/"
       #- label: "Twitter"
      # icon: "fab fa-fw fa-twitter-square"
      # url: "https://twitter.com/"
