--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,5 @@ main:
     url: /View Resume/
   - title: "Skills"
     url: /Skills/
-  - title: "Portfolio"
-    url: /portfolio/
+  - title: "Projects"
+    url: /projects/
